--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "three": "^0.148.0"
+    "lil-gui": "^0.17.0",
+    "three": "^0.148.0",
+    "vite-plugin-glsl": "^1.1.1"
   }
 }
