--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "gsap": "^3.11.4",
     "lil-gui": "^0.17.0",
     "three": "^0.148.0",
     "vite-plugin-glsl": "^1.1.1"
